# hw-tonic

./: Cargo.toml  README.md
proto/: hw.proto
src/: client.rs  server.rs
