[package]
name = "hw-tonic"
version = "0.1.0"
authors = ["Anupam Gupta <mapuna_@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # to run the hw grpc server
name = "hw-server"
path = "src/server.rs"

[[bin]] # to the the hw grpc client
name = "hw-client"
path = "src/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = {version = "0.2", features = ["macros"]}

[build-dependencies]
tonic-build = "0.3"
